--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <main>
         <nav>
             <a href="timer.html">Javascript Timer</a>
+            <a href="https://kirbolotl.github.io/Index/">GitHub Link</a>
         </nav>
         <blockquote>&quot;Imagine a pizza, only half should be business the rest should be personal. personal pizza.&quot; -Marceline</blockquote>
         <p>
